npm install react-addons-pure-render-mixin

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "jquery": "^2.2.4",
     "meteor-node-stubs": "^1.0.0",
     "react": "^16.13.1",
+    "react-addons-pure-render-mixin": "^15.6.2",
     "react-dom": "^16.13.1"
   }
 }
