--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "meteor-node-stubs": "^1.0.0",
     "react": "^16.13.1",
     "react-addons-pure-render-mixin": "^15.6.2",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2"
   }
 }
