--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "@babel/runtime": "^7.8.3",
     "jquery": "^2.2.4",
+    "markdown": "^0.5.0",
     "meteor-node-stubs": "^1.0.0",
     "react": "^16.13.1",
     "react-addons-pure-render-mixin": "^15.6.2",
+    "react-codemirror": "^1.0.0",
     "react-dom": "^16.13.1",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2"
